added survey functionality

--- a/templ/admin.html
+++ b/templ/admin.html
@@ -77,7 +77,7 @@
             <li><a href="#/admin" ng-click="qualsByProv()">Quals</a></li>
             <li><a href="#/admin" ng-click="ordersByProv()">Orders</a></li>
             <li><a href="#/admin" ng-click="productGeo()">Product availability</a></li>
-            <li><mk-upload style="padding: 3px 20px" label="Import" path="file/upload" fnc="onImportUploaded($event)"></mk-upload></li>
+            <li><a href="#/admin" ng-click="import()">Import</a></li>
             <li><a href="#/admin" ng-click="export()">Export to email list [SilverPop]</a></li>
         </ul>
     </li>
