--- a/templ/questionProps.html
+++ b/templ/questionProps.html
@@ -11,31 +11,43 @@
     <mk-upload label="Change" path="image/upload" fnc="onQueImgUploaded($event)"></mk-upload>
     </div>
     <div style="position:relative;float: left; margin-left: 30px">
-    <label class="mk_label_stacked">Question</label>
-    <textarea ng-model="selque.label"></textarea>
+        <div style="position: relative;clear: both">
+            <label style="clear: both" class="mk_label">Published</label>
+            <input style="float: left;margin-left: 20px" type="checkbox" ng-model="selque.active">
+        </div>
+        <textarea ng-model="selque.label"></textarea>
     </div>
+
+    <div style="position: relative;clear: both">
+        <label style="clear: both" class="mk_label">Template</label>
+        <input style="float: left;margin-left: 20px" type="text" ng-model="selque.templateUrl">
+    </div>
+    <div style="position: relative;clear: both">
+        <label style="clear: both" class="mk_label">Category</label>
+        <input style="float: left;margin-left: 20px" type="text" ng-model="selque.cat">
+    </div>
+
     <!--<label class="mk_label_stacked">Type</label>-->
     <!--<select ng-model="selque.type" ng-options="o for o in quetypes"></select>-->
 
-    <div style="position: relative;clear: both">
-        <label style="clear: both" class="mk_label">Published</label>
-        <input style="float: left;margin-left: 20px" type="checkbox" ng-model="selque.active">
-    </div>
+
     <div style="position: relative; clear: both">
-        <p>Save answers in consumer attribute:</p>
+        <p><b>Save answers in consumer attribute:</b></p>
         <ul class="mk_hroptlist">
             <li>
                 <label class="mk_label">Pick existing</label>
-                <input style="float:left" ng-model="customField" value="Existing" type="radio">
+                <input style="float:left;margin-left: 5px;" ng-model="customField" value="Existing" type="radio">
             </li>
             <li>
                 <label style="margin-left: 20px;" class="mk_label">Create new</label>
-                <input style="float:left" ng-model="customField" value="New" type="radio">
+                <input style="float:left;margin-left: 5px;" ng-model="customField" value="New" type="radio">
             </li>
         </ul>
-        <label class="mk_label_stacked">Attibute name</label>
-        <select ng-show="customField == 'Existing'" ng-options="o.fldname as o.label for o in customAtts" ng-change="onFieldChange()" ng-model="selque.value" ng-change="onSelectField()"></select>
-        <div ng-show="customField == 'Existing'" class="btn" ng-click="deleteSelField()">x</div>
+        <label class="mk_label_stacked">Consumer Attibute</label>
+        <div style="position:relative;margin: 5px">
+            <select ng-show="customField == 'Existing'" ng-options="o.fldname as o.label for o in customAtts" ng-change="onFieldChange()" ng-model="selque.value" ng-change="onSelectField()"></select>
+            <div ng-show="customField == 'Existing'" class="btn" ng-click="deleteSelField()">x</div>
+        </div>
 
         <input ng-show="customField == 'New'" type="text" ng-model="ca.label">
     </div>
@@ -49,8 +61,19 @@
         <div ui-sortable="sortableOptions" ng-model="selque.responses">
             <div style="height: 100px; clear: both" ng-repeat="a in selque.responses" ng-class-odd="'odd_row'" ng-class-even="'even_row'">
                 <div class="mkResponseField"><img width="30" height="50" ng-src="{{a.imageUrl}}"><mk-upload label="Change" path="image/upload" fnc="onAnswerImgUploaded($event, a)"></mk-upload></div>
-                <div class="mkResponseField"><img width="30" height="30" src="/images/linkedque.png" ng-click="editLinkedQue(a)" ng-show="a.link"></div>
-                <div class="mkResponseField"><div class="btn" ng-click="newLinkedQue(a, selque)" ng-show="!a.link">?</div></div>
+                <div class="mkResponseField">
+                    <div style="position: relative;clear: both">
+                        <img width="30" height="30" src="/images/linkedque.png" ng-click="editLinkedQue(a)" ng-show="a.link">
+                    </div>
+                    <div style="position: relative;clear: both">
+                        <img width="30" height="30" src="/images/unlink.png" ng-click="removeLinkedQue(a)" ng-show="a.link">
+                    </div>
+                </div>
+                <div class="mkResponseField">
+                    <div style="position: relative;clear: both">
+                        <img width="30" height="30" src="/images/newlink.png" ng-click="newLinkedQue(a, selque)" ng-show="!a.link">
+                    </div>
+                </div>
                 <div class="mkResponseField">
                     <div style="position: relative;clear: both">
                         <select style="width: 180px" ng-show="!a.fresh" ng-model="a.value" ng-options="o for o in ca.fldopts"></select>
