--- a/tenants/Amazon/azquedevs.html
+++ b/tenants/Amazon/azquedevs.html
@@ -1,43 +1,12 @@
-<div>Select the devices you have or plan to have. Select all that apply.</div>
+<div>{{currentQue.label}}</div>
 
 <div class="clearer h20">&nbsp;</div>
 
-<div class="box-1 style3">
+<div class="box-1 style3" ng-repeat="r in currentQue.responses">
     <div class="inner clearfix">
         <div class="icons"><img src="assets/img/icon9.png"></div>
-        <h4>Smart TV<br>&nbsp;</h4>
-        <div align="center"><input type="checkbox"></div>
+        <h4>{{r.label}}<br>&nbsp;</h4>
+        <div align="center"><input ng-click="answer(r)" ng-model="r.selected" type="checkbox"></div>
     </div>
 </div>
 
-<div class="box-1 style3">
-    <div class="inner clearfix">
-        <div class="icons"><img src="assets/img/icon10.png"></div>
-        <h4>TV<br>&nbsp;</h4>
-        <div align="center"><input type="checkbox"></div>
-    </div>
-</div>
-
-<div class="box-1 style3">
-    <div class="inner clearfix">
-        <div class="icons"><img src="assets/img/icon11.png"></div>
-        <h4>Desktop/Laptop Computer</h4>
-        <div align="center"><input type="checkbox"></div>
-    </div>
-</div>
-
-<div class="box-1 style3">
-    <div class="inner clearfix">
-        <div class="icons"><img src="assets/img/icon12.png"></div>
-        <h4>Tablet/Mobile Device</h4>
-        <div align="center"><input type="checkbox"></div>
-    </div>
-</div>
-
-<div class="box-1 style3 last">
-    <div class="inner clearfix">
-        <div class="icons"><img src="assets/img/icon13.png"></div>
-        <h4>Smart Phone<br>&nbsp;</h4>
-        <div align="center"><input type="checkbox"></div>
-    </div>
-</div>
