--- a/admin.html
+++ b/admin.html
@@ -57,6 +57,7 @@
     <script src="ctrl/optctrl.js" type="text/javascript"></script>
     <script src="ctrl/adminctrl.js" type="text/javascript"></script>
     <script src="ctrl/exportctrl.js" type="text/javascript"></script>
+    <script src="ctrl/rulectrl.js" type="text/javascript"></script>
     <script src="dir/leafletDir.js" type="text/javascript"></script>
     <script src="dir/mkkeydown.js" type="text/javascript"></script>
     <script src="dir/selectDir.js" type="text/javascript"></script>
