--- a/tenants/Amazon/aztmpl.html
+++ b/tenants/Amazon/aztmpl.html
@@ -43,7 +43,7 @@
     <script src="../../dir/providerDir.js" type="text/javascript"></script>
     <script src="../../dir/sortlistDir.js" type="text/javascript"></script>
     <script src="../../dir/chartDir.js" type="text/javascript"></script>
-    <script src="../../amazinjector.js" type="text/javascript"></script>
+    <script src="amazinjector.js" type="text/javascript"></script>
     <script src="../../ctrl/adminHelper.js" type="text/javascript"></script>
 
 </head>
