--- a/tenants/Amazon/azquedevs.html
+++ b/tenants/Amazon/azquedevs.html
@@ -4,7 +4,7 @@
 
 <div class="box-1 style3" ng-repeat="r in currentQue.responses">
     <div class="inner clearfix">
-        <div class="icons"><img src="assets/img/icon9.png"></div>
+        <div class="icons"><img src="{{topUrl}}{{r.imageUrl}}"></div>
         <h4>{{r.label}}<br>&nbsp;</h4>
         <div align="center"><input ng-click="answer(r)" ng-model="r.selected" type="checkbox"></div>
     </div>
