--- a/templ/seglist.html
+++ b/templ/seglist.html
@@ -7,8 +7,8 @@
     <div style="position: relative;float: left"><img width="100" height="70" ng-src="{{ruletypeUrl}}"></div>
     <div style="position: relative;float: left;margin-left: 40px"><h3>{{viewTitle}}</h3></div>
 </div>
-<div style="position: relative;width: 70%;margin: auto; margin-top: 40px;" ui-sortable="sortableOptions" ng-model="listData">
-<div style="margin-left: 50px;margin-top: 50px;margin-bottom: 50px;border: 1px solid #0077b3;" ng-repeat="rule in listData">
+<div style="position: relative;width: 70%;margin: auto; margin-top: 40px;" ui-sortable="sortableOptions" ng-model="ruleData">
+<div style="margin-left: 50px;margin-top: 50px;margin-bottom: 50px;border: 1px solid #0077b3;" ng-repeat="rule in ruleData">
     <div class="quedel" ng-click="deleteRule(rule)"><img src="/images/step_del.png" width="20" height="20"></div>
     <div style="height: 60px;position: relative;clear: both;">
         <div class="mkToolBtnWide" ng-click="editRule(rule)"><h3 ng-class="{'stepactive': rule.active, '': !rule.active}" style="margin-top: 0px">{{rule.name}}</h3></div>
