--- a/admin.html
+++ b/admin.html
@@ -48,6 +48,7 @@
     <script src="dir/cartparms.js" type="text/javascript"></script>
     <script src="dir/mkuploadDir.js" type="text/javascript"></script>
     <script src="dir/dynamic.js" type="text/javascript"></script>
+    <script src="ctrl/authctrl.js" type="text/javascript"></script>
     <script src="ctrl/prodctrl.js" type="text/javascript"></script>
     <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
