--- a/templ/admin.html
+++ b/templ/admin.html
@@ -23,7 +23,8 @@
             <li><a href="#/admin" ng-click="loadZips()">Geo</a></li>
             <li><a href="#/admin" ng-click="loadSegmentList()">Demographic segements</a></li>
             <li><a href="#/admin" ng-click="loadBlockList()">Template blocks</a></li>
-
+            <li><a href="#/admin" ng-click="loadUsers()">Users</a></li>
+            <li><a href="#/admin" ng-click="loadSessions()">Sessions</a></li>
             <!--<li><a href="#/admin" ng-click="loadOptLst()">Options</a></li>-->
         </ul>
     </li>
@@ -51,6 +52,7 @@
             <li><a href="#/admin" ng-click="createGeo()">Geo mapping</a></li>
             <li><a href="#/admin" ng-click="createSegRule()">Demographic segment</a></li>
             <li><a href="#/admin" ng-click="createBlock()">Template block</a></li>
+            <li><a href="#/admin" ng-click="createUser()">User</a></li>
         </ul>
     </li>
     <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Attributes<b class="caret"></b></a>
@@ -70,6 +72,8 @@
             <li><a href="#/admin" ng-click="loadRuleFields()">Rules</a></li>
             <li><a href="#/admin" ng-click="loadBlockFields()">Blocks</a></li>
             <li><a href="#/admin" ng-click="loadDraftFields()">Drafts</a></li>
+            <li><a href="#/admin" ng-click="loadUserFields()">Users</a></li>
+            <li><a href="#/admin" ng-click="loadSessionFields()">Sessions</a></li>
         </ul>
     </li>
     <li class="dropdown"><a href="#"class="dropdown-toggle"data-toggle="dropdown">Reports<b class="caret"></b></a>
