--- a/admin.html
+++ b/admin.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" ng-href="{{clintCSS}}"/>
     <link href="bedit/css/bootstrap-editable.css" rel="stylesheet">
     <link href="/css/select2.css" rel="stylesheet"/>
+    <script>
+        var adminURL = '';
+    </script>
     <script src="js/leaflet/leaflet.js"></script>
     <!--<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>-->
     <script src="jquery/jquery-1.7.min.js" type="text/javascript"></script>
@@ -25,6 +28,7 @@
     <script src="js/jquery.fileupload.js"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
     <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
+    <script src="js/angular-cookies.min.js" type="text/javascript"></script>
     <script src="js/sortable.js" type="text/javascript"></script>
     <script src="js/date.js" type="text/javascript"></script>
     <script src="grid/jquery.event.drag-2.2.js"></script>
