implemented filter bar

--- a/portal.html
+++ b/portal.html
@@ -226,7 +226,7 @@
                     <a href="#">Settings</a>
                 </li>
                 <li>
-                    <a href="#" ng-click="openAdminProfile()">Profile</a>
+                    <a href="#" ng-click="openMe()">Profile</a>
                 </li>
                 <li>
                     <a href="#">
@@ -521,7 +521,9 @@
 <script src="dir/mkuploadDir.js" type="text/javascript"></script>
 <script src="dir/dynamic.js" type="text/javascript"></script>
 <script src="ctrl/authctrl.js" type="text/javascript"></script>
+<script src="ctrl/filterctrl.js" type="text/javascript"></script>
 <script src="ctrl/userctrl.js" type="text/javascript"></script>
+<script src="ctrl/userlistctrl.js" type="text/javascript"></script>
 <script src="ctrl/prodctrl.js" type="text/javascript"></script>
 <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
 <script src="ctrl/cartadminctrl.js" type="text/javascript"></script>
