--- a/admin/templ/spread.html
+++ b/admin/templ/spread.html
@@ -7,4 +7,68 @@
         </div>
     </div>
 </section>
+<section class="hbox stretch">
 <div class="ngridStyle" ng-grid="gridOptions"></div>
+<aside class="bg-light lter b-r aside-md hidden-print nav-xs-right" id="filternav" ng-controller="filterctrl">
+<section class="vbox">
+<header class="header bg-primary lter text-center clearfix">
+    <div class="row">
+        <a href="#filternav" data-toggle="class:nav-xs" class="pull-left btn btn-sm btn-default btn-icon">
+            <i class="fa fa-angle-right text"></i>
+            <i class="fa fa-angle-left text-active"></i>
+        </a>
+        <div class="btn-group">
+            <!--<button type="button" class="btn btn-sm btn-dark btn-icon"></button>-->
+            <div class="btn-group hidden-nav-xs">
+                <button type="button" class="btn btn-sm btn-primary" ng-click="load()">
+                    Apply
+                </button>
+                <button type="button" class="btn btn-sm" ng-click="reset()">
+                    Reset
+                </button>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="w-f ">
+<div class="slim-scroll" data-height="auto" data-disable-fade-out="true" data-distance="0" data-size="5px" data-color="#333333">
+
+<!-- nav -->
+<nav class="nav-primary hidden-xs">
+<ul class="nav">
+<li >
+    <a href="index.html"  >
+        <i class="fa fa-dashboard icon">
+            <b class="bg-danger"></b>
+        </i>
+        <span>Quick Stats</span>
+    </a>
+</li>
+<li  class="active">
+    <a href="#layout"   class="active">
+        <i class="fa fa-filter icon">
+            <b class="bg-warning"></b>
+        </i>
+                        <span class="pull-right">
+                          <i class="fa fa-angle-down text"></i>
+                          <i class="fa fa-angle-up text-active"></i>
+                        </span>
+        <span>Filter</span>
+    </a>
+    <ul class="nav lt" style="display: block">
+        <li ng-repeat="fd in fieldList">
+            <section class="panel panel-default">
+                <header class="panel-heading font-bold">{{fd.label}}</header>
+                <div class="panel-body" ng-include="fd.template"></div>
+            </section>
+        </li>
+    </ul>
+</li>
+</ul>
+</nav>
+<!-- / nav -->
+</div>
+</section>
+</section>
+</aside>
+</section>
